--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="weatherApp.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -65,7 +65,7 @@
             
         </div>
     </div>
-    <script src="weatherApp.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
